[package]
name = "geo-hash"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "Geo-hashing utilities"
readme = "README.md"
repository = "https://github.com/DoumanAsh/geo-hash"
license = "BSL-1.0"
keywords = ["geohash", "geo", "coordinates"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.serde]
version = "1"
default-features = false
optional = true

[package.metadata.docs.rs]
features = ["serde"]
